--- a/noi.html
+++ b/noi.html
@@ -674,7 +674,7 @@
   console.log(sh)
 </script>
 
-<script xtype="xxx" id="ch0105/21">
+<script type="xxx" id="ch0105/21">
   var n = Number(prompt())
   var count = 0
   do {
@@ -693,4 +693,432 @@
       console.log("End")
     }
   } while (n != 1)
+</script>
+
+<script type="xxx" id="ch0105/22">
+  var sum = 0
+  var count = 0
+  var surplus = 0
+  for (var i = 1; i <= 12; i++) {
+    var zhichu = Number(prompt())
+    sum += 300
+    sum = sum - zhichu
+    if (sum < 0) {
+      console.log(-i)
+      break
+    }
+    if (sum >= 100) {
+      surplus = sum % 100
+      count += (sum - surplus) / 100
+      sum = surplus
+    }
+  }
+  if (i > 12) {
+    sum += count * 100 * 1.2
+    console.log(sum)
+  }
+</script>
+
+<script type="xxx" id="ch0105/23">
+  var m = Number(prompt())
+  var n = Number(prompt())
+  var count = 0
+  for (var i = 1; i <= n; i++) {
+    var xuqiu = Number(prompt())
+    if (m - xuqiu < 0){
+      count++
+    }else{
+      m = m-xuqiu
+    }
+  }
+  console.log(count)
+</script>
+
+<script type="xxx" id="ch0105/24">
+  var n = Number(prompt())
+  var count = 0
+  var max = 0
+  for (var i = 1; i <= n; i++) {
+    var m = Number(prompt())
+    var s = Number(prompt())
+    if ((m >= 90 && m <= 140) && (s >= 60 && s <= 90)) {
+      count++
+      if (count > max) {
+        max = count
+      }
+    } else {
+      count = 0
+    }
+  }
+  console.log(max)
+</script>
+
+<script type="xxx" id="ch0105/25">
+  for (var num = 100; ; num++) {
+    if (
+      num.toString(7) % 10 == Math.trunc(num.toString(9) / 100)
+      && Math.trunc(num.toString(7) % 100 / 10) == Math.trunc(num.toString(9) % 100 / 10)
+      && num.toString(9) % 10 == Math.trunc(num.toString(7) / 100)
+    ) break
+</script>
+
+<script type="xxx" id="ch0105/26">
+  var n = Number(prompt())
+  var count = 0
+  for (var i = 0; i < n; i++) {
+    var m = Number(prompt())
+    var ge = m % 10
+    var shi = (m - ge) / 10 % 10
+    var bai = (m - shi) / 100 % 10
+    var qian = (m - bai) / 1000 % 10
+    if (ge - qian - bai - shi > 0) {
+      count++
+    }
+  }
+  console.log(count)
+</script>
+
+<script type="xxx" id="ch0105/27">
+  var k = Number(prompt())
+  var sum = 0
+  for (var i = 1; ; i++) {
+    sum += 1 / i
+    if (sum > k) {
+      console.log(i)
+      break
+    }
+  }
+</script>
+
+<script type="xxx" id="ch0105/28">
+  var n = Number(prompt())
+  var k = 0
+  while (n > 0) {
+    k = n % 10
+    console.log(k)
+    n = (n - k) / 10
+  }
+</script>
+
+<script type="xxx" id="ch0105/29">
+  var n = Number(prompt())
+  var k = 0
+  var count = ""
+  while (n > 0) {
+    k = n % 10
+    count += k
+    n = (n - k) / 10
+  }
+  if (n < 0) {
+    n = -n
+    count = "-"
+    while (n > 0) {
+      k = n % 10
+      if (k == 0) {
+        n = (n - k) / 10
+        continue
+      }
+      count += k
+      n = (n - k) / 10
+    }
+  }
+  console.log(count)
+</script>
+
+<script type="xxx" id="ch105/30">
+  var m = Number(prompt())
+  var k = Number(prompt())
+  var count = 0
+  if (m % 19 == 0) {
+    while (m > 0) {
+      n = m % 10
+      if (n == 3) {
+        count++
+      }
+      m = (m - n) / 10
+    }
+    if(count == k){
+      console.log("YES")
+    }else{
+      console.log("NO")
+    }
+  } else {
+    console.log("NO")
+  }
+</script>
+
+<script type="xxx" id="ch0105/31">
+  var N = parseInt(prompt())
+  var M = parseInt(prompt())
+  var lights = ''
+  var isFirst = true
+
+  for (i = 1; i <= N; i++) {
+    var light = true
+    for (j = 1; j <= M; j++) {
+      if (i % j == 0) {
+        light = !light
+      }
+    }
+    if (!light) {
+      if (isFirst) {
+        lights += i
+        isFirst = false
+      } else {
+        lights += ',' + i
+      }
+    }
+  }
+
+  console.log(lights)
+</script>
+
+
+<script type="xxx" id="ch0105/32">
+  var n = parseInt(prompt())
+  var p = 1
+  var q = 2
+  var Sn = 0
+
+  for (count = 0; count < n; count++) {
+    Sn += q / p
+    q = q + p
+    p = q - p
+  }
+
+  console.log(Sn.toFixed(4))
+</script>
+
+
+<script type="xxx" id="ch0105/33">
+  var n = parseInt(prompt())
+  var Sn = 0
+
+  for (count = 0; count < n; count++) {
+    Sn += ((-1) ** count) / (count + 1)
+  }
+
+  console.log(Sn.toFixed(4))
+</script>
+
+
+<script type="xxx" id="ch0105/34">
+  var n = parseInt(prompt())
+  var Sn = 0
+  var an = 1
+
+  for (count = 0; count < n; count++) {
+    an *= count + 1
+    Sn += an
+  }
+
+  console.log(Sn)
+</script>
+
+
+<script type="xxx" id="ch0105/35">
+  var n = parseInt(prompt())
+  var e = 1
+  var an = 1
+
+  for (count = 0; count < n; count++) {
+    an *= count + 1
+    e += 1 / an
+  }
+
+  console.log(e.toFixed(10))
+</script>
+
+
+<script type="xxx" id="ch0105/36">
+  var x = +prompt()
+  var n = +prompt()
+  var Sn = 0
+
+  for (; n >= 0; n--) {
+    Sn += x ** n
+  }
+
+  console.log(Sn.toFixed(2))
+</script>
+
+
+<script type="xxx" id="ch0105/37">
+  var M = parseInt(prompt())
+  var N = parseInt(prompt())
+  var X = parseInt(prompt())
+  var 体力 = 0
+
+  for (; X > 0; X--) {
+    体力 += N
+    if (体力 >= M) {
+      var n = 0
+      for (var m = M; m > 0; m--) {
+        n++
+        if (n == N) {
+          N++
+          n = 0
+        }
+      }
+      体力 = 0
+    }
+  }
+
+  console.log(N)
+</script>
+
+
+<script type="xxx" id="ch0105/38">
+  var m = Number(prompt())
+
+  for (var i = 0; i < m; i++) {
+    var n = Number(prompt())
+    if (n == 0) {
+      var c = Number(prompt())
+      console.log(0)
+    } else {
+      for (var j = n; j >= 0; j--) {
+        var c = Number(prompt())
+
+        if (j != 0) {
+          console.log(c * j)
+        }
+      }
+    }
+  }
+</script>
+
+
+<script type="xxx" id="ch0105/39">
+  var n = parseInt(prompt())
+  var sum = 0
+
+  for (count = 0; count < n;) {
+    count++
+    if (count % 7 != 0 && Math.trunc(count / 10) != 7 && count % 10 != 7) {
+      sum += count ** 2
+    }
+  }
+
+  console.log(sum)
+</script>
+
+
+<script type="xxx" id="ch0105/40">
+  var n = parseInt(prompt())
+  var sum_1 = 0
+
+  for (; n > 0; n--) {
+    if (Math.trunc(n / 10) == 1 || Math.trunc(n / 100) == 1 || Math.trunc(n / 1000) == 1) {
+      sum_1++
+    }
+    if (n % 10 == 1) {
+      sum_1++
+    }
+  }
+
+  console.log(sum_1)
+</script>
+
+
+<script type="xxx" id="ch0105/41">
+  var L = parseInt(prompt())
+  var R = parseInt(prompt())
+  var sum_2 = 0
+
+  for (; L <= R; L++) {
+    for (var n = 0; 10 ** n < L;) {
+      n++
+      if (Math.trunc((L % (10 ** n)) / 10 ** (n - 1)) == 2) {
+        sum_2++
+      }
+    }
+  }
+
+  console.log(sum_2)
+</script>
+
+
+<script type="xxx" id="ch0105/42">
+  var width = parseInt(prompt())
+  var heigth = parseInt(prompt())
+  var sy = prompt()
+  var fill = +prompt()
+
+  for (h = 0; h < heigth; h++) {
+    var str = ''
+    for (w = 0; w < width; w++) {
+
+      if (h == 0 || h == heigth - 1) {
+        str += sy
+      } else {
+        if (fill == 0) {
+          if (w == 0 || w == width - 1) str += sy
+          else str += ' '
+        } else {
+          str += sy
+        }
+      }
+    }
+    console.log(str)
+  }
+</script>
+
+
+<script type="xxx" id="ch0105/43">
+  var n = parseInt(prompt())
+
+  for (x = n; x > 0; x--) {
+    if (n / x % 1 == 0) {
+      var sum = 0
+      for (a = x; a > 0; a--) {
+        if (x / a % 1 == 0) {
+          sum += a
+        }
+      }
+      if (sum == x + 1) {
+        console.log(x)
+        break
+      }
+    }
+  }
+</script>
+
+
+<script type="xxx" id="ch0105/44">
+  var n = parseInt(prompt())
+  var NO = 0
+
+  for (num = 2; ; num++) {
+    var sum = 0
+    for (x = num; x > 0; x--) {
+      if (num / x % 1 == 0) {
+        sum += x
+      }
+    }
+    if (sum == num + 1) NO++
+    if (NO == n) {
+      console.log(num)
+      break
+    }
+  }
+</script>
+
+
+<script type="xxx" id="ch0105/45">
+  var day = parseInt(prompt())
+  var sum = 0
+  var N = 1
+  var n = 0
+
+  for (var days = 1; days <= day; days++) {
+    if (n == N) {
+      N++
+      n = 0
+    }
+    sum += N
+    n++
+  }
+
+  console.log(sum)
 </script>
