--- a/noi.html
+++ b/noi.html
@@ -1135,9 +1135,9 @@
       m = (m - k) / 10
     }
     if (n == sum) {
-      return YES
+      return "YES"
     } else {
-      return NO
+      return "NO"
     }
   }
   console.log(nar(n))
@@ -1157,7 +1157,7 @@
         m = (m - k) / 10
       }
       if (i == sum) {
-        t += i +","
+        t += i +" "
       }
     }
     return t
@@ -1178,9 +1178,9 @@
     }
     var counts = Number(count)
     if (n == counts) {
-      return YES
+      return "YES"
     } else {
-      return NO
+      return "NO"
     }
   }
   console.log(palindrom(n))
@@ -1201,9 +1201,9 @@
       }
     }
     if (n == count) {
-      return YES
+      return "YES"
     } else {
-      return NO
+      return "NO"
     }
   }
   console.log(com(n))
@@ -1244,9 +1244,9 @@
       }
     }
     if (flag) {
-      return YES
+      return "YES"
     }else{
-      return NO
+      return "NO"
     }
   }
   console.log(isPrime(n))
@@ -1265,7 +1265,7 @@
         }
       }
       if (flag) {
-        count += i + ","
+        count += i + " "
       }
     }
     return count
