--- a/noi.html
+++ b/noi.html
@@ -1157,7 +1157,7 @@
         m = (m - k) / 10
       }
       if (i == sum) {
-        t += i +" "
+        t += i +""
       }
     }
     return t
@@ -1252,7 +1252,7 @@
   console.log(isPrime(n))
 </script>
 
-<script type="xxx" id="primes">
+<script xtype="xxx" id="primes">
   var n = Number(prompt())
   function primes(n) {
     flag = false;
@@ -1265,7 +1265,7 @@
         }
       }
       if (flag) {
-        count += i + " "
+        count += i + ""
       }
     }
     return count
