--- a/noi.html
+++ b/noi.html
@@ -1211,6 +1211,52 @@
 </script>
 
 <script type="xxx" id="weekday">
+  function isry(year) {
+    if (year % 4 == 0) {
+      return true
+    }
+    if (year % 100 == 0) {
+      return false
+    }
+    if (year % 400 == 0) {
+      return true
+    }
+  }
+  function sumday(year, month) {
+    switch (month) {
+      case (1):
+      case (3):
+      case (5):
+      case (7):
+      case (8):
+      case (10):
+      case (12):
+        return 31
+      case (2):
+        if (isry) {
+          return 29
+        } else {
+          return 28
+        }
+      default:
+        return 30
+    }
+  }
+  var year = Number(prompt())
+  var month = Number(prompt())
+  var day = 0
+  for (var i = 1; i <= year; i++) {
+    if (isry(i)) {
+      day += 366
+    } else {
+      day += 365
+    }
+  }
+  for (var j = 1; j <= month; j++) {
+    day += sumday(j)
+  }
+  day = (day + 1) % 7
+  console.log(day)
 
 </script>
 
@@ -1341,4 +1387,89 @@
       console.log(i)
     }
   }
+</script>
+
+<script type="xxx" id="itoa">
+  var n = Number(prompt())
+  var result = ""
+  while (n > 0) {
+    k = n % 10
+    if (k == 0) {
+      result = "0" + result
+    }
+    if (k == 1) {
+      result = "1" + result
+    }
+    if (k == 2) {
+      result = "2" + result
+    }
+    if (k == 3) {
+      result = "3" + result
+    }
+    if (k == 4) {
+      result = "4" + result
+    }
+    if (k == 5) {
+      result = "5" + result
+    }
+    if (k == 6) {
+      result = "6" + result
+    }
+    if (k == 7) {
+      result = "7" + result
+    }
+    if (k == 8) {
+      result = "8" + result
+    }
+    if (k == 9) {
+      result = "9" + result
+        + result
+    }
+    n = (n - k) / 10
+  }
+  console.log(result)
+</script>
+
+<script type="xxx" id="lcf&lcm">
+  var n = Number(prompt())
+  var m = Number(prompt())
+  var k = 0
+  if (n - m < 0) {
+    while (m % n != 0) {
+      k = m % n
+      m = n
+      n = k
+    }
+    console.log(n)
+
+  } else {
+    while (n % m != 0) {
+      k = n % m
+      n = m
+      m = k
+    }
+    console.log(m)
+  }
+</script>
+
+<script xtype="xxx" id="sqrt">
+  var n = Number(prompt())
+  //二分法：处理大型运算
+  function sqrt(n) {
+    var left = 0
+    var right = n
+    do {
+      var mid = (left + right) / 2
+      if (mid * mid < n) {            //如果乘方小于n，说明mid不够大，那么移动左边，再次的mid会变大
+        left = mid
+      } else if (mid * mid > n) {    //如果乘方大于n，说明mid过大，所以右边往左移，让mid变小
+        right = mid
+      } else {
+        return mid
+      }
+    } while (Math.abs(mid * mid - n) > 0.00000001)  //这是为了让数值更精确
+    return mid
+  }
+  var result = sqrt(n).toFixed(3)
+  console.log(result)
 </script>
